--- a/debugbanner/build.gradle
+++ b/debugbanner/build.gradle
@@ -47,10 +47,9 @@ afterEvaluate {
     publishing {
         publications {
             release(MavenPublication) {
-                groupId = 'com.github.yohannestz'
+                groupId = 'com.github.YohannesTz'
                 artifactId = 'debugbanner'
                 version = '0.0.1'
-
                 afterEvaluate {
                     from components.release
                 }
